--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server"
+    "dev": "ts-node-dev -r dotenv/config --no-notify --respawn --transpileOnly src/server"
   },
   "author": "Roshan Acharya",
   "license": "ISC",
@@ -15,7 +15,13 @@
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.5",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/node": "^14.0.1",
-    "graphql-yoga": "^1.18.3"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
